--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 
 .DS_Store
+Template/.idea/misc.xml
+Template/.idea/modules.xml
+Template/.idea/Template.iml
+Template/.idea/vcs.xml
+Template/.idea/workspace.xml
